# NN_Keras

./: .gitignore  README.md  main.py  pyproject.toml
docs/: PLANNING.md  PRD.md  TASKS.md
results/plots/: .gitkeep
src/: __init__.py
src/data/: __init__.py  clean_data.py  noisy_data.py
src/evaluation/: metrics.py
src/models/: __init__.py  and_gate.py  xor_gate.py
src/training/: __init__.py  trainer.py
src/visualization/: __init__.py  decision_boundary.py  plots.py
