[project]
name = "nn-keras-logic-gates"
version = "1.0.0"
description = "Neural Networks for Logic Gates using Keras - Educational Implementation"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
